--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                         <ul class="nav navbar-nav navbar-right header-navbar-right">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">How it works</a></li>
-                            <li><a href="#">Integration process</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><button class="header-button"><a href="#">Request Demo</a></button></li>
+                            <li class="navbar-li"><a href="#">Home</a></li>
+                            <li class="navbar-li"><a href="#">About</a></li>
+                            <li class="navbar-li"><a href="#">How it works</a></li>
+                            <li class="navbar-li"><a href="#">Integration process</a></li>
+                            <li class="navbar-li"><a href="#">Contact</a></li>
+                            <li class="btn header-button"><a href="#">Request Demo</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
