--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
                         <ul class="nav navbar-nav navbar-right header-navbar-right">
                             <li class="navbar-li"><a href="#">Home</a></li>
                             <li class="navbar-li"><a href="#">About</a></li>
@@ -67,25 +66,25 @@
         </div>
         <div class="header-user">
             <div class="user-left">
-                <p>Hi Leila! I want to understand<br>how to improve sales in my company</p>
+                <p>Hi Leila! I want to understand how to improve sales in my company</p>
                 <img src="./img/icon.png" alt="user">
             </div>
             <div class="user-right">
-                <p>Hello! I analyzed company<br>data and prepared some tips.</p>
+                <p>Hello! I analyzed company data and prepared some tips.</p>
                 <img src="./img/4.png" alt="think">
             </div>
         </div>
     </header>
     <main id="main">
         <section class="main-anlize">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="row">
-                    <div class="col-md-7 analize-graphik">
+                    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 analize-graphik">
                         <img src="./img/graphik1.png" alt="graphik">
                     </div>
-                    <div class="col-md-5 analyze-content">
-                        <h2 class="title-content">Analyzing data<br>in real time mode
-                            <span class="title-conten-line">
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 analyze-content">
+                        <h2 class="title-content">Analyzing data in real time mode
+                            <span class="title-content-line">
                                 <img src="./img/line.png" alt="line">
                             </span>
                         </h2>
@@ -96,7 +95,6 @@
                                 <h3>25k+</h3>
                                 <p>External data sources</p>
                             </div>
-                            <div class="sources-line"></div>
                             <div class="company">
                                 <h3>96+</h3>
                                 <p>Company datd sources</p>
@@ -106,80 +104,80 @@
                 </div>
             </div>
         </section>
-        <div class="main-container">
+        <div class=" container main-container">
             <div class="main-line">
                 <img src="./img/linebutt.png" alt="line">
             </div>
         </div>
         <section class="main-find">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="row">
-                    <div class="col-md-5 find-content">
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 find-content">
                         <h2 class="title-content">Find patterns<br>and patterns
-                            <span class="title-conten-line">
+                            <span class="title-content-line">
                                 <img src="./img/line.png" alt="line">
                             </span>
                         </h2>
                         <p>Leila finds patterns and determines the scenarios in which your company`s employees make
                             the most sales, business-tobusiness ifographic!</p>
-                        <input class="find-button" type="submit" value="Read More">
+                        <button class="find-button">Read More</button>
                     </div>
-                    <div class="col-md-7 find-graphik">
+                    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 find-graphik">
                         <img src="./img/1.png" alt="Melissa Mayer">
                     </div>
                 </div>
             </div>
         </section>
-        <div class="main-container">
+        <div class=" container main-container">
             <div class="main-line">
                 <img src="./img/linebutt.png" alt="line">
             </div>
         </div>
         <section class="main-tips">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="row">
-                    <div class="col-md-7 tips-graphik">
+                    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 tips-graphik">
                         <img src="./img/graphik3.png" alt="graphik">
                     </div>
-                    <div class="col-md-5 tips-content">
-                        <h2 class="title-content">We give tips<br>and advice
-                            <span class="title-conten-line">
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 tips-content">
+                        <h2 class="title-content">We give tips and advice
+                            <span class="title-content-line">
                                 <img src="./img/line.png" alt="line">
                             </span>
                         </h2>
                         <p>After identifying the best sales experience, Leila builds up a hint system in which employees
                             receive tips and recomendations for action.</p>
-                        <input class="find-button" type="submit" value="Read More">
+                        <button class="find-button">Read More</button>
                     </div>
                 </div>
             </div>
         </section>
-        <div class="main-container">
+        <div class=" container main-container">
             <div class="main-line">
                 <img src="./img/linebutt.png" alt="line">
             </div>
         </div>
         <section class="main-competitive">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="competitive-header-container">
-                    <h2 class="competitive-header">Find out how url Leila<br>help you increase sales</h2>
+                    <h2 class="competitive-header">Find out how url Leila will help you increase sales</h2>
                     <p class="competitive-header-text">Us Al as an undeniable competitive advantage</p>
                 </div>
                 <div class="competitive-image">
                     <img src="./img/3.png" alt="competitive">
                 </div>
                 <div class="row competitive-content-container">
-                    <div class="col-md-4 competitive-content competitive-content-first">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 competitive-content">
                         <h4>Boost sales</h4>
                         <p>Increase sales by using the best scenarios for closing deals in your</p>
                         <img src="./img/7.png" alt="boost">
                     </div>
-                    <div class="col-md-4 competitive-content competitive-content-center">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 competitive-content">
                         <h4>Improve customer experience</h4>
                         <p>Understand better than your customers and improve your</p>
                         <img src="./img/6.png" alt="deal">
                     </div>
-                    <div class="col-md-4 competitive-content competitive-content-last">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 competitive-content">
                         <h4>Anticipate Problems</h4>
                         <p>Use the power of predictive analytics to predict problems before</p>
                         <img src="./img/5.png" alt="attention">
@@ -188,9 +186,9 @@
             </div>
         </section>
         <section class="main-integration">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="row">
-                    <div class="col-md-6 integration-content">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 integration-content">
                         <h2 class="integration-content-header">Easy and fast integration</h2>
                         <div class="integration-text">
                             <p class="integration-text-normal">
@@ -208,22 +206,24 @@
                         <div class="integration-content-footer">
                             <div class="integration-footer-circle">
                             </div>
-                            <h5 class="integration-footer-header"> Felix Nguyen</h5>
-                            <p class="integration-footer-text">Apple`s CEO</p>
+                            <div class="integration-footer-content">
+                                <h5 class="integration-footer-header"> Felix Nguyen</h5>
+                                <p class="integration-footer-text">Apple`s CEO</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 intagration-image">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 intagration-image">
                         <img src="./img/111.png" alt="integration">
                     </div>
                 </div>
             </div>
         </section>
         <section class="main-increasing">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="increasing-content">
                     <h2 class="increasing-header">Increase sales ap to 70% right now!</h2>
                     <p class="increasing-text">The best Start Up for your Perfect App</p>
-                    <input class="increasing-button" type="submit" value="Get App Now">
+                    <button class="increasing-button">Get App Now</button>
                 </div>
                 <div class="increasing-image">
                     <img src="./img/222.png" alt="increasing">
@@ -231,22 +231,49 @@
             </div>
         </section>
         <footer id="footer">
-            <div class="main-container">
+            <div class="container main-container">
                 <div class="footer-logo">
                     <img src="./img/logo-footer.png" alt="footer-logo">
                 </div>
                 <div class="footer-content-container">
-                    <div class="footer-content footer-content-first">First Al business partner to help you take your business to a new leve.</div>
-                    <div class="footer-content footer-content-center">© Made by Tenoris AG</div>
+                    <div class="footer-content footer-content-first">
+                        <span>First Al business partner to help you take your
+                            business to a new level.</span>
+                    </div>
+                    <div class="footer-content footer-content-center">
+                        <span>© Made by Tenoris AG</span>
+                    </div>
                     <div class="footer-content footer-content-last">
-                        <div class="footer-contact">f</div>
                         <div class="footer-information">
-                            <div class="service"></div>
-                            <div class="policy"></div>
+                            <div class="service">
+                                <a href="http://facebook.com" target="_blank"><img src="./img/fb.png"
+                                        alt="facebook"></a>
+                                <a href="http://twitter.com" target="_blank"><img src="./img/twitter.png"
+                                        alt="twitter"></a>
+                                <a href="http://google.com" target="_blank"><img src="./img/google.png"
+                                        alt="google"></a>
+                                <a href="http://linkedin.com" target="_blank"><img src="./img/in.png"
+                                        alt="instagram"></a>
+                                <a href="http://youtube.com" target="_blanc"><img src="./img/youtube.png"
+                                        alt="youtube"></a>
+                            </div>
+                            <div class="policy"><span>Terms of Service</span>
+                            <span>Privacy Policy</span></div>
                         </div>
                     </div>
+                    <!-- <div class="footer-content-container">
+                        <div class="footer-content footer-content-first">First Al business partner to help you take your
+                            business to a new leve.</div>
+                        <div class="footer-content footer-content-center">© Made by Tenoris AG</div>
+                        <div class="footer-content footer-content-last">
+                            <div class="footer-contact"></div>
+                            <div class="footer-information">
+                                <div class="service"></div>
+                                <div class="policy"></div>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
-            </div>
 
         </footer>
     </main>
