--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container main-container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 analize-graphik">
-                        <img src="./img/graphik1.png" alt="graphik">
+                        <img class="img-responsive" src="./img/graphik1.png" alt="graphik">
                     </div>
                     <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 analyze-content">
                         <h2 class="title-content">Analyzing data in real time mode
@@ -113,7 +113,7 @@
             <div class="container main-container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 find-content">
-                        <h2 class="title-content">Find patterns<br>and patterns
+                        <h2 class="title-content">Find patterns and patterns
                             <span class="title-content-line">
                                 <img src="./img/line.png" alt="line">
                             </span>
@@ -123,12 +123,12 @@
                         <button class="find-button">Read More</button>
                     </div>
                     <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 find-graphik">
-                        <img src="./img/1.png" alt="Melissa Mayer">
+                        <img class="img-responsive" src="./img/1.png" alt="Melissa Mayer">
                     </div>
                 </div>
             </div>
         </section>
-        <div class=" container main-container">
+        <div class="main-container">
             <div class="main-line">
                 <img src="./img/linebutt.png" alt="line">
             </div>
@@ -137,10 +137,10 @@
             <div class="container main-container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 tips-graphik">
-                        <img src="./img/graphik3.png" alt="graphik">
+                        <img class="img-responsive" src="./img/graphik3.png" alt="graphik">
                     </div>
                     <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 tips-content">
-                        <h2 class="title-content">We give tips and advice
+                        <h2 class="title-content title-content-tips">We give tips and advice
                             <span class="title-content-line">
                                 <img src="./img/line.png" alt="line">
                             </span>
@@ -164,7 +164,7 @@
                     <p class="competitive-header-text">Us Al as an undeniable competitive advantage</p>
                 </div>
                 <div class="competitive-image">
-                    <img src="./img/3.png" alt="competitive">
+                    <img class="img-responsive" src="./img/3.png" alt="competitive">
                 </div>
                 <div class="row competitive-content-container">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 competitive-content">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 intagration-image">
-                        <img src="./img/111.png" alt="integration">
+                        <img class="img-responsive" src="./img/111.png" alt="integration">
                     </div>
                 </div>
             </div>
