--- a/index.html
+++ b/index.html
@@ -258,26 +258,13 @@
                                         alt="youtube"></a>
                             </div>
                             <div class="policy"><span>Terms of Service</span>
-                            <span>Privacy Policy</span></div>
-                        </div>
-                    </div>
-                    <!-- <div class="footer-content-container">
-                        <div class="footer-content footer-content-first">First Al business partner to help you take your
-                            business to a new leve.</div>
-                        <div class="footer-content footer-content-center">© Made by Tenoris AG</div>
-                        <div class="footer-content footer-content-last">
-                            <div class="footer-contact"></div>
-                            <div class="footer-information">
-                                <div class="service"></div>
-                                <div class="policy"></div>
+                                <span>Privacy Policy</span>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
-
         </footer>
     </main>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
